???? 0.9.14


16/6/2014 0.9.13   Shai Shasag <shai@waves.com>

    programmer visible changes:
    Integrated all var-stack features:
    * InstallItem creates it's own var_list.
    * InstallItem pushes it's own var_list to var_stack through 'with' statement.
    * All action lists for an Installitem are taken from var_stack with variables.

9/6/2014 0.9.12   Shai Shasag <shai@waves.com>

    user visible changes, client:
    * new variable __PYTHON_VERSION__ to record the version of python instl was compiled with

    user visible changes, admin:
    * Added option to limit stage2svn to specific folders, to save time.
    * up-repo-rev now creates a batch file like all other commands.
    * up-repo-rev does not use boto - depends on aws command line tools.
    * No more usage of AWS keys inside instl or created batch files. All AWS config comes from the ./aws/config file.

    programmer visible changes:
    * New resolve methods for ConfigVarList: resolve, resolve_to_list, replace previous methods: get_str, resolve_string
        get_list.New methods are faster and simpler to unserstand.
    * Tests for new resolve methods.
    * Removed unused member Configvar.__resolving_in_progress, preventing circular resolves is done in ConfigVarList.
    * Introduced $(A[0]) array style references.
    * up2s3 calls up-repo-rev with --out parameter

28/5/2014 0.9.11   Shai Shasag <shai@waves.com>
    user visible changes, client:
    * Fixed a problem where index.yaml would not be copied to bookkeeping when syncing to DOK.
    
    programmer visible changes:
    * Copy tools got a new method copy_file_to_file.
    
27/5/2014 0.9.10   Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Removed redundant echo during copy.
    * Fixed: set-exec was not called or caled using the wrong have-info-map file if command was synccopy.

    user visible changes, admin:
    * wtar command: removed previously wtar files if tarring should be preformed.
