@@ -217,7 +217,6 @@ class CMDObj(cmd.Cmd, object):
         """ Add color codes to index identifiers and variables in text.
         """
         coloring_dict = self.prepare_coloring_dict()
-        from configVarList import replace_all_from_dict
         retVal = replace_all_from_dict(text, *[], **coloring_dict)
         return retVal
 
